--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lyfter/wp-cli-toolbox",
+    "description": "Toolbox containing useful commands for Wordpress development",
     "homepage": "https://github.com/peters97/wp-cli-toobox.git",
     "authors": [
         {
